force-app/main/default/objects/Financial_Aid_Detail__c/Financial_Aid_Detail__c.object-meta.xml
<CustomObject>
    <description>[Peoplesoft] - Combination of PS_ASU_SP_FA_SUM_V__x , PS_AID_YEAR_TBL , and PS_STDNT_AWARDS.</description>
    <label>Financial Aid Detail</label>
    <nameField>
        <label>Financial Aid Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Aid Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>