force-app/main/default/objects/Financial_Aid_Detail__c/fields/Acad_Career__c.field-meta.xml
<CustomField>
    <fullName>Acad_Career__c</fullName>
    <description>(PeopleSoft) PS_STDNT_AWARDS.ACAD_CAREER</description>
    <label>Career</label>
    <length>4</length>
    <type>Text</type>
</CustomField>