force-app/main/default/objects/Financial_Aid_Detail__c/fields/Accept_Amount__c.field-meta.xml
<CustomField>
    <fullName>Accept_Amount__c</fullName>
    <description>(PeopleSoft) PS_STDNT_AWARDS.ACCEPT_AMOUNT</description>
    <label>Accepted Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>