force-app/main/default/objects/Financial_Aid_Detail__c/fields/Aid_Year__c.field-meta.xml
<CustomField>
    <fullName>Aid_Year__c</fullName>
    <description>(PeopleSoft) PS_STDNT_AWARDS.AID_YEAR</description>
    <label>Aid Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>