force-app/main/default/objects/Financial_Aid_Detail__c/fields/Award_Summary__c.field-meta.xml
<CustomField>
    <fullName>Award_Summary__c</fullName>
    <description>PS_ASU_FA_ITEM_VW .SFA_CR_AWARD_TYPE</description>
    <label>Award Summary</label>
    <length>80</length>
    <type>Text</type>
</CustomField>