force-app/main/default/objects/Financial_Aid_Detail__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Match with EMPLID</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Financial Aid Details</relationshipLabel>
    <relationshipName>Financial_Aid_Details</relationshipName>
    <type>Lookup</type>
</CustomField>