force-app/main/default/objects/Financial_Aid_Detail__c/fields/Descr__c.field-meta.xml
<CustomField>
    <fullName>Descr__c</fullName>
    <description>[Peoplesoft] PS_AID_YEAR_TBL.DESCR</description>
    <label>Academic Year</label>
    <length>12</length>
    <type>Text</type>
</CustomField>