force-app/main/default/objects/Financial_Aid_Detail__c/fields/Descr_Category__c.field-meta.xml
<CustomField>
    <fullName>Descr_Category__c</fullName>
    <description>(PeopleSoft) PS_STDNT_AWARDS.DESCR_CATEGORY</description>
    <label>Category</label>
    <length>25</length>
    <type>Text</type>
</CustomField>