force-app/main/default/objects/Financial_Aid_Detail__c/fields/Disbursed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Disbursed_Amount__c</fullName>
    <description>(PeopleSoft) PS_STDNT_AWARDS.DISBURSED_AMOUNT</description>
    <label>Disbursed Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>