force-app/main/default/objects/Financial_Aid_Detail__c/fields/Offer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Offer_Amount__c</fullName>
    <description>(PeopleSoft) PS_STDNT_AWARDS.OFFER_AMOUNT</description>
    <label>Offer Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>